java21 downgrade + functionalities to prd (#9)
* csv import test with tc

* angular - widoczny

* angular - widoczny

* panel - logowania

* changed styles

* 1st version

* 2nd version add user working

* 3nd working with user id

* ignore one fields in mapper

* ignore one fields in mapper

* ui dziala na admin mod usera / dodawanie / to samo templates

* onboarding url changed

* onboarding url changed

* onboarding url changed

* works with j21, tests need fix

* manager tasks

* ManagerTaskResponseDto

* lombok z mapstruct but not work

* mapstruct problem handled

* update problem fixed ( archive from menago )

* fixed refreshing archived tasks

* autocomplete position

* fix user creation from manager

* Confirmation dialog - deleting users work as expected

* lokalnie style

* styles fixed to mcdonalds

* fixed csv import

* fixed csv import tsts

* UserService tests fixed

* onboarding tests ok